--- a/.config/copyparty/copyparty-cloudflare.conf
+++ b/.config/copyparty/copyparty-cloudflare.conf
@@ -1,4 +1,5 @@
 # this copyparty config is intended for use with a cloudflare tunnel 
+# see https://github.com/9001/copyparty for install and config help
 [global]
   # name: mac-mini    # manually name your copyparty server
   p: 80, 443, 3939    # listen on port 3939
