Update copyparty-ios.conf configuration settings

--- a/.config/copyparty/copyparty-ios.conf
+++ b/.config/copyparty/copyparty-ios.conf
@@ -5,23 +5,26 @@
   p: 80, 443, 3939  # enable http and https on these ports
   e2dsa      # enable file indexing and filesystem scanning
   e2ts       # and enable multimedia indexing
+  df: 16     # stop accepting uploads if free disk space < 16 GB 
   ver        # show copyparty version in the controlpanel
   qrz: 2     # enable qr-code and make it big
   qrp: 1     # reduce qr-code padding
   qr-fg: -1  # optimize for basic/simple terminals
 
   # enable these by uncommenting them:
-  # ftp: 21    # enable ftp server on port 21
-  # tftp: 69   # enable tftp server on port 69
+  # ftp: 21  # enable ftp server on port 21
+  # tftp: 69 # enable tftp server on port 69
 
 [accounts]
-   admin: password
+  admin: password
 
-[/]
-  .
+[/]          # create a volume at "/" (the webroot), which will   
+  .          # share the contents of "." (the current directory)
   accs:
     rwmda: admin
+    # be careful assigning access; your config lives here!
 
+# a folder where anyone can upload, but no one can see anything
 [/blackhole]
    ./blackhole
    accs:
@@ -31,9 +34,17 @@
      e2d
      nodupe
 
+# a folder where anyone can upload and anyone can access
+# their own uploads, but nothing else
 [/stash]
    ./stash
    accs:
      wG: *
-  flags:
+   flags:
      e2d, d2t, fk: 4
+# volflag "e2d" enables the uploads database,
+# "d2t" disables multimedia parsers (uploads may be malicious),
+# "dthumb" disables thumbnails (same reason),
+# "fk" enables filekeys (necessary for upget) (4 chars long)
+# * note that its fine to combine all the volflags on
+# one line because only the last volflag has an argument
