Fix typos in copyparty-cf.conf comments

--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -50,14 +50,15 @@
     rw: sally, billy  # the users "sally" and "billy" can see the contents,
     rwmda: admin      # while "admin" gets full privileges
 
-# a directory for anyone to consue admin orchestrated media
+# a directory for anyone to consume admin orchestrated media
 [/media]
   ./media
   accs:
     r: *
     rwmda: admin
 
-# a folder where anyone can upload, but nobody but "admin" can see the contents
+# a folder where anyone can upload, even those without user accounts,
+# but only "admin" can access files
 [/blackhole]
   ./blackhole
   accs:
