Clarify directory comments in copyparty-cf.conf
Updated comments for clarity in copyparty-cf.conf

--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -50,14 +50,14 @@
     rw: sally, billy  # the users "sally" and "billy" can see the contents,
     rwmda: admin      # while "admin" gets full privileges
 
-# a directory for anyone to consume admin orchestrated media
+# a directory where anyone can consume admin orchestrated media
 [/media]
   ./media
   accs:
     r: *
     rwmda: admin
 
-# a folder where anyone can upload, even those without user accounts,
+# a directory where anyone can upload, even those without user accounts,
 # but only "admin" can access files
 [/blackhole]
   ./blackhole
@@ -69,7 +69,7 @@
     nodupe            # the nodupe volflag rejects duplicate uploads
     # (see --help-flags for all available volflags to use)
 
-# a folder where anyone can upload, even those without user accounts,
+# a directory where anyone can upload, even those without user accounts,
 # and anyone can access their own uploads, but nothing else
 [/stash]
   ./stash
