--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -43,9 +43,9 @@
   accs:
     rwmda: admin
 
-# a directory for users to upload files that users can see 
-[/uploads]
-  ./uploads
+# a directory where registered users can share among themselves 
+[/shared]
+  ./shared
   accs:
     rw: sally, billy  # the users "sally" and "billy" can see the contents,
     rwmda: admin      # while "admin" gets full privileges
@@ -57,30 +57,20 @@
     r: *
     rwmda: admin
 
-# a directory where anyone can upload, even those without user accounts,
-# but only "admin" can access files
-[/blackhole]
-  ./blackhole
+# a directory where anyone can upload, but nobody can see the contents
+[/wormhole]
+  ./wormhole
   accs:
-    w: *
+    wG: *
     rwmda: admin
   flags:
-    e2d               # the e2d volflag enables the uploads database
-    nodupe            # the nodupe volflag rejects duplicate uploads
-    # (see --help-flags for all available volflags to use)
-
-# a directory where anyone can upload, even those without user accounts,
-# and anyone can access their own uploads, but nothing else
-[/stash]
-  ./stash
-  accs:
-    wG: *             # wG = write-upget = see your own uploads only
-    rwmda: admin
-  flags:
-    e2d, d2t, fk: 4
+    e2d, d2t, dthumb, nodupe, fk: 4
     # volflag "e2d" enables the uploads database,
     # "d2t" disables multimedia parsers (in case the uploads are malicious),
     # "dthumb" disables thumbnails (same reason),
+    # "nodupe" rejects duplicate uploads,
     # "fk" enables filekeys (necessary for upget permission) (4 chars long)
     # * note that its fine to combine all the volflags on
     # one line because only the last volflag has an argument
+    # (see --help-flags for all available volflags to use)
+
