Refactor access configurations in copyparty-ios.conf

--- a/.config/copyparty/copyparty-ios.conf
+++ b/.config/copyparty/copyparty-ios.conf
@@ -24,27 +24,26 @@
     rwmda: admin
     # be careful assigning access; your config lives here!
 
-# a folder where anyone can upload, but no one can see anything
-[/blackhole]
-   ./blackhole
-   accs:
-     w: *
-     rwmda: admin
-   flags:
-     e2d
-     nodupe
+# a directory where anyone can consume admin orchestrated media
+[/media]
+  ./media
+  accs:
+    r: *
+    rwmda: admin
 
-# a folder where anyone can upload and anyone can access
-# their own uploads, but nothing else
-[/stash]
-   ./stash
-   accs:
-     wG: *
-   flags:
-     e2d, d2t, fk: 4
-# volflag "e2d" enables the uploads database,
-# "d2t" disables multimedia parsers (uploads may be malicious),
-# "dthumb" disables thumbnails (same reason),
-# "fk" enables filekeys (necessary for upget) (4 chars long)
-# * note that its fine to combine all the volflags on
-# one line because only the last volflag has an argument
+# a directory where anyone can upload, but nobody can see the contents
+[/wormhole]
+  ./wormhole
+  accs:
+    wG: *
+    rwmda: admin
+  flags:
+    e2d, d2t, dthumb, nodupe, fk: 4
+    # volflag "e2d" enables the uploads database,
+    # "d2t" disables multimedia parsers (in case the uploads are malicious),
+    # "dthumb" disables thumbnails (same reason),
+    # "nodupe" rejects duplicate uploads,
+    # "fk" enables filekeys (necessary for upget permission) (4 chars long)
+    # * note that its fine to combine all the volflags on
+    # one line because only the last volflag has an argument
+    # (see --help-flags for all available volflags to use)
