Update copyparty-cf.conf configuration

--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -42,6 +42,7 @@
   .                   # share the contents of "." (the current directory)
   accs:
     rwmda: admin
+    # be careful assigning access; your config lives here!
 
 # a directory where registered users can share among themselves 
 [/shared]
@@ -73,4 +74,3 @@
     # * note that its fine to combine all the volflags on
     # one line because only the last volflag has an argument
     # (see --help-flags for all available volflags to use)
-
