Update media directory to public in config
Changed media directory to public directory for access.

--- a/.config/copyparty/copyparty-ios.conf
+++ b/.config/copyparty/copyparty-ios.conf
@@ -25,8 +25,8 @@
     # be careful assigning access; your config lives here!
 
 # a directory where anyone can consume admin orchestrated media
-[/media]
-  ./media
+[/public]
+  ./public
   accs:
     r: *
     rwmda: admin
