Update device name in copyparty-ios config

--- a/.config/copyparty/copyparty-ios.conf
+++ b/.config/copyparty/copyparty-ios.conf
@@ -1,7 +1,7 @@
 # this config is intended for use on ios devices via 'a-shell'
 # see https://github.com/9001/copyparty for install and config
 [global]
-  # name: ipadpro
+  # name: ipad-pro
   p: 80, 443, 3939  # enable http and https on these ports
   e2dsa      # enable file indexing and filesystem scanning
   e2ts       # and enable multimedia indexing
