Update copyparty configuration for server settings

--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -5,6 +5,7 @@
   p: 80, 443, 3939    # listen on port 3939
   e2dsa               # enable file indexing and filesystem scanning
   e2ts                # and enable multimedia indexing
+  z                   # zeroconf on local network
   qr                  # qrcode (you can comma-separate arguments)
   df: 20              # stop accepting uploads if less than 20 GB free disk space
   ansi                # enable colors in log messages (both in logfiles and stdout)
