Update copyparty-ios.conf configuration

--- a/.config/copyparty/copyparty-ios.conf
+++ b/.config/copyparty/copyparty-ios.conf
@@ -5,6 +5,7 @@
   p: 80, 443, 3939  # enable http and https on these ports
   e2dsa      # enable file indexing and filesystem scanning
   e2ts       # and enable multimedia indexing
+  z          # zeroconf on local network
   df: 16     # stop accepting uploads if free disk space < 16 GB 
   ver        # show copyparty version in the controlpanel
   qrz: 2     # enable qr-code and make it big
