Rename wormhole directory to uploads

--- a/.config/copyparty/copyparty-ios.conf
+++ b/.config/copyparty/copyparty-ios.conf
@@ -33,8 +33,8 @@
     rwmda: admin
 
 # a directory where anyone can upload, but nobody can see the contents
-[/wormhole]
-  ./wormhole
+[/uploads]
+  ./uploads
   accs:
     wG: *
     rwmda: admin
