Update copyparty configuration for user access

--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -38,40 +38,41 @@
   sally: x
   billy: y
 
-# this is the directory in which copyparty.py and your config file are located
-[/]                   # create a volume at "/" (the webroot), which will
-  .                   # share the contents of "." (the current directory)
+[/]         # create a volume at "/" (the webroot), which will
+  .         # share the contents of "." (the current directory)
   accs:
-    rwmda: admin
-    # be careful assigning access; your config lives here!
-
-# a directory where registered users can share among themselves 
-[/shared]
-  ./shared
-  accs:
-    rw: sally, billy  # the users "sally" and "billy" can see the contents,
-    rwmda: admin      # while "admin" gets full privileges
-
-# a directory where anyone can consume admin orchestrated media
-[/media]
-  ./media
-  accs:
-    r: *
     rwmda: admin
 
 # a directory where anyone can upload, but nobody can see the contents
-[/wormhole]
-  ./wormhole
+[/uploads]
+  ./uploads
   accs:
-    wG: *
     rwmda: admin
+    wG: *
   flags:
-    e2d, d2t, dthumb, nodupe, fk: 4
-    # volflag "e2d" enables the uploads database,
-    # "d2t" disables multimedia parsers (in case the uploads are malicious),
-    # "dthumb" disables thumbnails (same reason),
-    # "nodupe" rejects duplicate uploads,
-    # "fk" enables filekeys (necessary for upget permission) (4 chars long)
-    # * note that its fine to combine all the volflags on
-    # one line because only the last volflag has an argument
-    # (see --help-flags for all available volflags to use)
+    e2d, d2t, dthumb, nodupe, fk:6
+
+# a directory where only "sally" can store and access his files
+[/sally]
+  ./sally
+  accs:
+    rwmda: admin
+    rwmd: mike
+    
+# a directory where only "billy" can store and access her files
+[/billy]
+  ./billy
+  accs:
+    rwmda: admin
+    rwmd: ivan
+    
+# a directory where anyone can consume admin orchestrated media
+[/public]
+  ./public
+  accs:
+    rwmda: admin      
+    r: *
+
+# a shadow directory to hide sensitive files, like backups and configs
+[/private]
+  ./private
