Change disk space threshold to 20 GB with 'g' suffix

--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -5,9 +5,10 @@
   p: 80, 443, 3939    # listen on port 3939
   e2dsa               # enable file indexing and filesystem scanning
   e2ts                # and enable multimedia indexing
+  shr: /shr           # enable sharing files via url
   z                   # zeroconf on local network
   qr                  # qrcode (you can comma-separate arguments)
-  df: 20              # stop accepting uploads if less than 20 GB free disk space
+  df: 20g             # stop accepting uploads if less than 20 GB free disk space
   ansi                # enable colors in log messages (both in logfiles and stdout)
   theme: 2            # pm-monokai theme
   rproxy: 1           # cloudflare reverse proxy awarness
