Update listening ports in copyparty config

--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -2,7 +2,7 @@
 # see https://github.com/9001/copyparty for install and config
 [global]
   # name: mac-mini    # manually name your copyparty server
-  p: 80, 443, 3939    # listen on port 3939
+  p: 3939             # listen on port 3939
   e2dsa               # enable file indexing and filesystem scanning
   e2ts                # and enable multimedia indexing
   shr: /shr           # enable sharing files via url
