Update access permissions for users in config

--- a/.config/copyparty/copyparty-cf.conf
+++ b/.config/copyparty/copyparty-cf.conf
@@ -58,14 +58,14 @@
   ./sally
   accs:
     rwmda: admin
-    rwmd: mike
+    rwmd: sally
     
 # a directory where only "billy" can store and access her files
 [/billy]
   ./billy
   accs:
     rwmda: admin
-    rwmd: ivan
+    rwmd: billy
     
 # a directory where anyone can consume admin orchestrated media
 [/public]
